Fix grid items align-self property

--- a/f-102-l02/style.css
+++ b/f-102-l02/style.css
@@ -11,6 +11,8 @@ main {
     display: grid;
     grid-template-columns: repeat(1, 1fr);
     column-gap: 1rem;
+    row-gap: 1rem;
+
 }
 
 @media screen and (min-width: 768px) {
@@ -33,6 +35,7 @@ figure {
     background-color: #E8F0FF;
     border: 0.5rem solid #F7ACCF;
     padding: 1rem;
+    align-self: start;
 }
 
 figure img {
@@ -43,4 +46,8 @@ figure img {
 figcaption h2 {
     text-align: center;
     margin-bottom: 1rem;
+}
+
+figcaption p+p {
+    margin-top: 1rem;
 }
